# python-for-devops

./: README.md  pyproject.toml  requirements.txt
src/: main.py
